tests/suite/fail/generated/parser/fail_undefined_8.ny
fn main() {
    let x = y8 //~ ERROR undefined variable
}
